--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -10,6 +10,7 @@
         <meta name="robots" content="{% block robots %}all{% endblock %}"/>
         
         {% block stylesheets %}
+            <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
             {% stylesheets output='css/style.css' filter='cssrewrite' 'css/*' %}
                 <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
             {% endstylesheets %}
