--- a/web/css/main.css
+++ b/web/css/main.css
@@ -291,7 +291,7 @@ p strong.blue { display: inline-block; color: #009fe3; font-weight: normal; marg
 .eleve_registration legend { width: 140px;  margin: 0; border: 0; border: 1px #cecece solid; border-bottom: 0 none; font-size: 13px; text-align: center; }
 .eleve_registration legend.espace-eleve { background: white; color: #009fe3; }
 .eleve_registration legend.espace-parent { background: #e5e5e5; color: #8a8a8a; }
-.eleve_registration .form-wrap-inner { background: white; border: 1px #cecece solid; padding: 20px; }
+.eleve_registration .form-wrap-inner { background: white; border: 1px #cecece solid; }
 .border-form { border-right: 1px #cecece solid; }
 .eleve_registration input[type=text], .eleve_registration input[type=password], .eleve_registration input[type=email], .eleve_registration select, .eleve_registration textarea { background: #f0f0f0; border: 2px solid #CCCCCC; height: 26px; line-height: 26px; }
 .eleve_registration textarea { height: 115px; width: 96%; margin-bottom: 0;}
@@ -299,13 +299,33 @@ p strong.blue { display: inline-block; color: #009fe3; font-weight: normal; marg
 .help-form { display: inline-block; margin-left: 20px; color: #009fe3; font-size: 14px; }
 .eleve_registration .craue-button, .eleve_registration .wrap-left { display:inline-block; width: 87.9%; vertical-align: top; }
 .eleve_registration .craue-button { width: 11.6%; }
-.eleve_registration .craue-button .align-profil, .eleve_registration .craue-button .align-objectifs { display: table-cell; width: 100%; height: 215px; vertical-align: bottom; }
+.eleve_registration .craue-button .align-profil, .eleve_registration .craue-button .align-objectifs { display: table-cell; width: 100%; height: 235px; vertical-align: bottom; }
 .eleve_registration .craue-button .align-objectifs { height: 127px;}
 #registration_eleve_adresse { width: 96.5%; }
-#registration_eleve_numeroPortable { float: right; }
-.eleve_registration  #registration_eleve_classe { height: 38px; line-height: 38px; padding: 8px 6px; }
+#registration_eleve_numeroPortable { float: right; width: 87%; }
+.eleve_registration  #registration_eleve_classe { height: 38px; line-height: 38px; padding: 8px 6px; width: 100%; margin-top: 25px;}
 .craue_poursuivre { border: 0 none; padding: 0; }
-.parent-title { background: url('/img/parent-title.png') top left; width: 255px; padding: 0 10px; height: 38px; line-height: 38px; color: white; font-size: 13px; float: left; margin-bottom: 0;}
-.parent-field { float: left; width: 250px; margin-left: 20px; margin-bottom: 0;}
+.form-text-end, .parent-title { background: url('/img/parent-title.png') top left; width: 255px; padding: 0 10px; height: 38px; line-height: 38px; color: white; font-size: 13px; float: left; margin-bottom: 0;}
+.form-text-end { background: url('/img/bloc-terminer.png') top left; width: 767px; }
+.parent-field { float: left; width: 230px; margin-left: 20px; margin-bottom: 0;}
 .parent-field  input { width: 92%; margin: 0; }
-
+.footer-form { margin: 20px 0; width: 100%; }
+.form-with-padding { width: 900px; padding: 20px; }
+/*choississez votre formule */
+.formule-cours { display: inline-block; width: 310px; background: #e5e5e5; vertical-align: top; text-align: center; padding-bottom: 30px; border-bottom: 1px #cecece solid; }
+.formule-cours p span { display: block; }
+.formule-cours-2 { width: 318px; border-left: 1px #cecece solid; border-right: 1px #cecece solid; }
+.formule-pack { width: 234px; vertical-align: top; text-align: center; padding: 30px 0; border-right: 1px #cecece solid;}
+.formule-pack-4 { border-right: 0 none; }
+.formule-pack p strong { display: block; color: #009fe3; font-size: 16px; }
+.formule-pack p span { display: block; color: #004899; font-size: 18px; }
+/*niveau estime*/
+label.niveau-estime { display: block; width: 92%;}
+.left-side, .right-side { display: inline-block; width: 50%; vertical-align: bottom; height: 59px; margin-bottom: 20px; }
+.right-side { width: 44%; margin-left: 5%; }
+.left-side .control-group, .left-side .controls { margin: 0; }
+.right-side .controls { height: 34px; background: #f0f0f0; border: 2px solid #CCCCCC; width: 200px;  }
+.niveau-estime { color: #9d9d9d; }
+#slider-blue{ float: left; clear: left; width: 160px; margin: 10px; }
+#slider-blue .ui-slider-range { background: #00489a; }
+#slider-blue .ui-slider-handle { border-color: #00489a; }
