end correction bug

--- a/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
@@ -190,7 +190,7 @@
                 </div>
                 
                 <div class="text-center margin-top-medium">
-                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                    <a title="Retour au menu principal" class="btn_up btn text-center" href="#"><i class="icon-arrow-up"></i></a>
                 </div >
                 
                 <footer class="footer">
@@ -317,7 +317,7 @@
                 </div>
                 
                 <div class="text-center margin-top-medium">
-                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                    <a title="Retour au menu principal" class="btn_up btn text-center" href="#"><i class="icon-arrow-up"></i></a>
                 </div >
                 
                 <footer class="footer">
@@ -445,7 +445,7 @@
                 </div>
                 
                 <div class="text-center margin-top-medium">
-                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                    <a title="Retour au menu principal" class="btn_up btn text-center" href="#"><i class="icon-arrow-up"></i></a>
                 </div >
                 
                 <footer class="footer">
@@ -596,7 +596,7 @@
                 </div>
                 
                 <div class="text-center margin-top-medium">
-                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                    <a title="Retour au menu principal" class="btn_up btn text-center" href="#"><i class="icon-arrow-up"></i></a>
                 </div >
                 
                 <footer class="footer">                    
