--- a/src/Msp/FrontendBundle/Resources/views/Page/lycee.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/lycee.html.twig
@@ -79,7 +79,7 @@
                 </div>
                 
                 <div class="text-center margin-top-medium">
-                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                    <a title="Retour au menu principal" class="btn_up btn text-center" href="#"><i class="icon-arrow-up"></i></a>
                 </div >
                 
                 <footer class="footer">
@@ -98,8 +98,9 @@
                         Selon votre choix de filière, les mathématiques auront une importance plus ou moins élevée. Il est recommandé fortement de consolider les bases via un soutien régulier en dehors des cours.
                     </p>
                 </div>
+                
                 <div class="text-center margin-top-medium">
-                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                    <a title="Retour au menu principal" class="btn_up btn text-center" href="#"><i class="icon-arrow-up"></i></a>
                 </div >
                 
                 <footer class="footer">
@@ -117,8 +118,9 @@
                         C’est l’année du bac, l’élève se doit d’obtenir de bons résultats qui détermineront ses différents choix d’orientations possibles (concours, classes préparatoires et autres)
                     </p>
                 </div>
+                
                 <div class="text-center margin-top-medium">
-                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                    <a title="Retour au menu principal" class="btn_up btn text-center" href="#"><i class="icon-arrow-up"></i></a>
                 </div >
                 
                 <footer class="footer">
