--- a/web/css/main.css
+++ b/web/css/main.css
@@ -150,7 +150,7 @@ ul.dash li:before{
 #slider .slider-handler { position: absolute; top: 0; left: 0; height: 252px; }
 #slider .slider-handler img { float: left; }
 /*  Contenu Niveau */
-#btn_up, #btn_up:hover { outline: none; }
+.btn_up, .btn_up:hover, .btn_up:focus, .btn_up:active { outline: none; }
 .niveau { background: #f2f2f2;  min-height: 500px; margin: 0 auto; width: 1200px;padding: 30px 0 30px 0}
 .niveau .header, .niveau .footer { max-width: 1000px; margin: 0 auto; }
 .niveau .header { background: #ced9e5; padding: 20px;  max-width: 960px; -webkit-border-radius: 10px; -o-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px;}
