--- a/src/Msp/UserBundle/Resources/views/Form/fields.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Form/fields.html.twig
@@ -1,8 +1,9 @@
 {% block registration_eleve_widget %}
 {% spaceless %}
 <div class="row-fluid">
-    {% if form.nom is defined %}
-    <div class="span5 border-form">        
+    {# Affichage du formulaire etape 1 #}
+    {% if form.plainPassword is defined %}
+    <div class="span5 border-form-1">        
         {# Affichage du champ nom #}
         <div class="control-group">
             {{ form_label(form.nom, null, {'label_attr': {'class' : 'control-label' }}) }}
@@ -27,6 +28,20 @@
             </div>
             {{ form_errors(form.prenom) }}
         </div>
+        {# Affichage du champ email #}        
+        <div class="control-group">
+            {{ form_label(form.email, null, {'label_attr': {'class' : 'control-label' }}) }}
+            <div class="controls">
+            {% if form.email.vars.errors|length %}
+                {{ form_widget(form.email, {'attr' : {'class' : 'input-large alert'}}) }}
+            {% else %}
+                {{ form_widget(form.email, {'attr' : {'class' : 'input-large'}}) }}
+            {% endif %}
+            </div>
+            {{ form_errors(form.email) }}
+        </div>
+    </div>
+    <div class="span7">
         {# Affichage du champ username #}
         <div class="control-group">
             {{ form_label(form.username, null, {'label_attr': {'class' : 'control-label' }}) }}
@@ -40,16 +55,41 @@
             {{ form_errors(form.username) }}
         </div>
         {# Affichage du champ plainPassword #}
+        {% for plainPassword in form.plainPassword %}
         <div class="control-group">
-            {{ form_label(form.plainPassword, null, {'label_attr': {'class' : 'control-label' }}) }}
+            {{ form_label(plainPassword, null, {'label_attr': {'class' : 'control-label' }}) }}
             <div class="controls">
-            {% if form.plainPassword.vars.errors|length %}
-                {{ form_widget(form.plainPassword, {'attr' : {'class' : 'input-large alert'}}) }}
+            {% if plainPassword.vars.errors|length %}
+                {{ form_widget(plainPassword, {'attr' : {'class' : 'input-large alert'}}) }}
             {% else %}
-                {{ form_widget(form.plainPassword, {'attr' : {'class' : 'input-large'}}) }}
+                {{ form_widget(plainPassword, {'attr' : {'class' : 'input-large'}}) }}
             {% endif %}
             </div>
-            {{ form_errors(form.plainPassword) }}
+            {{ form_errors(plainPassword) }}
+        </div>
+        {% endfor %}
+    </div>
+    {# Affichage du formulaire etape 2 #}
+    {% elseif form.adresse is defined %}
+    <div class="span5 border-form-2">
+        <div>
+            <p class="avenirNextBold">
+                {{ form.nom.vars.value }}
+            </p>
+            <p class="avenirNextBold">
+                {{ form.prenom.vars.value }}
+            </p> 
+            {# Affichage du champ nom #}
+            <div>            
+                {{ form_widget(form.nom) }}            
+            </div>
+            {# Affichage du champ prenom #}
+            <div>            
+                {{ form_widget(form.prenom) }}
+            </div>
+        </div>
+        <div class="edit-profil">
+            <a href="{{ path('msp_eleve_inscription') }}">Modifier</a>
         </div>
     </div>
     <div class="span7">
@@ -242,7 +282,7 @@
         </div>
         {% endfor %}
     {% endif %}
-    {{ form_rest(form) }}     
+    {{ form_rest(form) }}    
 </div>
 {% endspaceless %}
 {% endblock %}
