--- a/src/Msp/UserBundle/Resources/views/layout.html.twig
+++ b/src/Msp/UserBundle/Resources/views/layout.html.twig
@@ -1,5 +1,8 @@
 {% extends "::layout.html.twig" %}
 
+{# On retire le menu niveau #}
+{% block menuNiveau %}{% endblock %}
+
 {% block content %}
      
 {% for flashMessage in app.session.flashbag.get('notice') %}
